fixed heading details to anna's

--- a/index.html
+++ b/index.html
@@ -11,22 +11,22 @@
   <!-- <meta http-equiv="refresh" content="0; url=https://www.edavids.me"> -->
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="keywords"
-    content="Jeremiah David, Fullstack Developer in Nigeria, Best developer in south south, Learn fullstack development in nigeria, website mentorship, website training, free website mentorship, free website training in nigeria">
+    content="Anna Oke, Fullstack Developer in Nigeria, Best developer in south south, Learn fullstack development in nigeria, website mentorship, website training, free website mentorship, free website training in nigeria">
   <meta name="description"
     content="A fullstack web developer with 4+ years experience developing professional websites and mobile applications">
   <meta name="color-scheme" content="dark|light">
   <meta name="robots" content="all">
 
   <!-- Social Media Metas -->
-  <meta property="author" content="Jeremiah David">
-  <meta property="og:title" content="Jeremiah David - Fullstack Developer">
+  <meta property="author" content="Anna Oke">
+  <meta property="og:title" content="Anna Oke - Fullstack Developer">
   <meta property="og:type" content="website">
   <meta property="og:description"
     content="A fullstack web developer with 4+ years experience developing professional websites and mobile applications">
   <meta property="og:image" content="">
   <meta property="og:url" content="">
   <meta name="twitter:card" content="summary_large_image">
-  <meta property="og:site_name" content="Jeremiah David - Fullstack Developer">
+  <meta property="og:site_name" content="Anna Oke - Fullstack Developer">
   <meta name="twitter:image:alt" content="Edavids Logo Icon">
 
   <!-- social analytics from fb and twitter -->
@@ -53,7 +53,7 @@
   <!-- <link rel="stylesheet" href="css/flexslider.css"> -->
   <link rel="canonical" href="/">
   <!-- to access emojis just add :then emoji name example 🧮  -->
-  <title>Jeremiah David - Fullstack Developer </title>
+  <title>Anna Oke - Fullstack Developer </title>
 
 </head>
 
